--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,9 @@
 [build]
-  command = "hugo"
+  command = "npm run build"
   publish = "public"
 
 [build.environment]
-  HUGO_VERSION = "0.154.5"
   NODE_VERSION = "18"
+  NPM_VERSION = "10.9.4"
+  NPM_FLAGS = "--no-optional"
 
-[[build.processing.css.bundle]]
-  minify = true
-
-[[build.processing.js.bundle]]
-  minify = true
