--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.23",
     "hugo-extended": "^0.154.5",
     "netlify-lambda": "^1.6.3",
+    "postcss": "^8.5.6",
     "rimraf": "^6.1.2"
   }
 }
